@@ -22,6 +22,10 @@ SYNCHRONIZE
   detail is printed, from 0 (no reporting) to 3 (all reporting).
 - Added --move option that deletes local files after they have been uploaded to
   S3, or deletes objects from S3 after they have been downloaded.
+- Property settings in the synchronize.properties file, or in the file referred
+  to by the --properties option, will override properties of the same name in
+  jets3t.properties. This makes it easy to create task-specific properties
+  files.
 
 
 TOOLKIT
